refactor(tests): unify and improve unit tests per TEST_WRITING_GUIDE and CODE_WRITING_GUIDE
- Create CommonTestFixtures utility class with shared prompt/field generation factories
  and prompt key constants, eliminating duplication across 5 test classes
- Rename all test methods to follow methodUnderTest_condition_expectedBehavior convention
- Add editor-fold regions grouping tests by method under test
- Add AAA (arrange/act/assert) and pre-assert section comments to every test
- Replace all Assert.* calls with Hamcrest assertThat(actual, is(equalTo(expected)))
- Replace Assert.assertNotNull with assertThat(x, is(notNullValue()))
- Replace isBlank() boolean checks with assertThat(x.isBlank(), is(false/true))
- Extract repeated literals to private static final constants (FIXED_CHECKSUM, FIXED_BODY, etc.)
- Remove System.out.println calls from LlamaCppJniAiSummaryProviderTest
- Use AiMdHeaderCodec constants (NODE_TYPE_FILE, NODE_TYPE_PACKAGE, HEADER_VERSION_1_0)
  instead of inline string literals

https://claude.ai/code/session_01BjQquxRLofbfNbTRqezU4Z